# Home-Companion-Robot

./: server.py
Demo_with_BT/: CMakeLists.txt  bt_trace.btlog  config.ini  models.xml  package.xml  tree1216.xml  tree3.xml
Demo_with_BT/include/common/: config.h  logger.h
Demo_with_BT/include/nodes/: battery_ok.h  clear_costmaps.h  command_conditions.h  detect_fall.h  dock_and_charge.h  navigateTo.h  navigate_to.h  relocate.h  switch.h  tts.h  wait_seconds.h
Demo_with_BT/src/: main.cpp
Demo_with_BT/src/common/: config.cpp
Demo_with_BT/src/nodes/: .battery_ok.cpp.swp  battery_ok.cpp  command_conditions.cpp  detect_fall.cpp  dock_and_charge.cpp  navigateTo.cpp  relocate.cpp  tts.cpp  wait_seconds.cpp
Demo_with_BT/test/: charge.py  relocate.py
Mega_Control/: mpi_control_node5.py
OCR/UI/: 物料核对.html
OCR/client/: process_camera.py
OCR/server/: data_process.py  requrement.txt  server_with_ocr.py
Test/: test.py
UI/: control.html
sample_home_robot/: control.html  package.xml  setup.cfg  setup.py
sample_home_robot/launch/: ros_ws_bridge.launch.py  ros_ws_bridge_with_cameras.launch.py
sample_home_robot/sample_home_robot/: camera0_ws_node.py  camera1_ws_node.py  cmd_ws_node.py
